load("//tools/base/bazel:kotlin.bzl", "maven_library")
load("//tools/base/common:version.bzl", "BUILD_VERSION")
load("//prebuilts/tools/common/aapt:aapt2_version.bzl", "AAPT2_VERSION")

maven_library(
    name = "aapt2-proto",
    srcs = [],
    bundled_deps = [
        ":aapt2-proto-with-notice",
    ],
    coordinates = "com.android.tools.build:aapt2-proto:" + BUILD_VERSION + "-" + AAPT2_VERSION,
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com.google.protobuf.protobuf-java",
    ],
)

# This is here just to merge the NOTICE file into the prebuilt proto jar.
java_library(
    name = "aapt2-proto-with-notice",
    resource_jars = ["//prebuilts/tools/common/aapt/protos"],
    resource_strip_prefix = "tools/base/build-system/aapt2-proto",
    resources = ["NOTICE"],
)

filegroup(
    name = "agp_gradle_build_files",
    srcs = glob([
        "src/main/**/*.java",
        "src/main/**/*.kt",
        "src/main/resources/**",
    ]) + [
        "build.gradle",
        "NOTICE",
        "//tools/buildSrc/base:version.properties",
        "//prebuilts/tools/common/aapt:aapt2_version.properties",
    ],
    visibility = ["//tools/base/build-system:__pkg__"],
)
