[
    filegroup(
        name = project_name,
        srcs = glob([project_name + "/**"]),
        visibility = [
            ":__subpackages__",
        ],
    )
    for project_name in glob(
        ["test-projects/*"],
        exclude = ["**/*.*"],  # Ignore files with '.' (e.g. .gitignore, commonBuildScript.gradle)
        exclude_directories = 0,
    )
]

# Used for bazel packages below this one that use GradleTestProject.
exports_files(["test-projects/commonBuildScript.gradle"])

LATEST_SUPPORT = "28.0.0"

LATEST_ANDROID_X_SUPPORT = "1.0.0"

LATEST_ANDROID_X_ARCH = "2.0.0"

LATEST_ANDROID_X_CONSTRAINTLAYOUT = "1.1.3"

load("//tools/base/bazel:maven.bzl", "maven_repository")

maven_repository(
    name = "support_library_latest",
    artifacts = [
        "@maven_tests//:com.android.support.design_" + LATEST_SUPPORT,
        "@maven_tests//:com.android.support.leanback-v17_" + LATEST_SUPPORT,
        "@maven_tests//:com.android.support.support-v13_" + LATEST_SUPPORT,
        "@maven_tests//:com.android.support.support-v4_" + LATEST_SUPPORT,
        "@maven_tests//:android.arch.navigation.navigation-fragment_1.0.0",
        "@maven_tests//:android.arch.persistence.room.runtime_1.0.0",
        "@maven_tests//:com.android.support.test.rules_1.0.2",
        "@maven_tests//:com.android.support.test.runner_1.0.2",
        "@maven_tests//:org.jacoco.org.jacoco.ant_0.8.3",
    ],
    visibility = [":__subpackages__"],
)

maven_repository(
    name = "androidx_latest",
    artifacts = [
        "@maven_tests//:androidx.room.room-compiler_" + LATEST_ANDROID_X_ARCH,
        "@maven_tests//:androidx.room.room-runtime_" + LATEST_ANDROID_X_ARCH,
        "@maven_tests//:androidx.appcompat.appcompat_" + LATEST_ANDROID_X_SUPPORT,
        "@maven_tests//:androidx.preference.preference_" + LATEST_ANDROID_X_SUPPORT,
        "@maven_tests//:androidx.constraintlayout.constraintlayout_" + LATEST_ANDROID_X_CONSTRAINTLAYOUT,
        "@maven_tests//:androidx.legacy.legacy-support-v4_" + LATEST_ANDROID_X_SUPPORT,
    ],
    visibility = [":__subpackages__"],
)

maven_repository(
    name = "androidx_test_latest",
    # keep sorted
    artifacts = [
        "@maven_tests//:androidx.test.ext.junit_1.1.2",
        "@maven_tests//:androidx.test.rules_1.3.0",
        "@maven_tests//:androidx.test.runner_1.3.0",
    ],
    visibility = [":__subpackages__"],
)

# These dependencies are required for the Gradle Kotlin DSL use.
maven_repository(
    name = "gradle_kotlin_dsl_prebuilts",
    # keep sorted
    artifacts = [
        "@maven_tests//:org.jetbrains.kotlin.kotlin-reflect_1.5.21",
        "@maven_tests//:org.jetbrains.kotlin.kotlin-stdlib-jdk8_1.5.21",
        "@maven_tests//:org.jetbrains.kotlin.kotlin-stdlib_1.5.21",
    ],
    visibility = [":__subpackages__"],
)

# Dagger dependencies
maven_repository(
    name = "dagger_prebuilts",
    # keep sorted
    artifacts = [
        "@maven_tests//:com.google.dagger.dagger-compiler_2.28.3",
        "@maven_tests//:com.google.dagger.dagger_2.28.3",
    ],
    visibility = [":__subpackages__"],
)

# Kotlin Gradle plugin dependencies
maven_repository(
    name = "kotlin_gradle_plugin_prebuilts",
    # keep sorted
    artifacts = [
        "@maven_tests//:org.jetbrains.kotlin.jvm.org.jetbrains.kotlin.jvm.gradle.plugin_1.5.0",
        "@maven_tests//:org.jetbrains.kotlin.kotlin-android-extensions-runtime_1.5.0",
        "@maven_tests//:org.jetbrains.kotlin.kotlin-gradle-plugin_1.5.0",
        "@maven_tests//:org.jetbrains.kotlin.kotlin-stdlib-jdk8_1.5.0",
    ],
    visibility = ["//visibility:public"],
)

# Kotlin Gradle plugin 1.4.32 dependencies
maven_repository(
    name = "kotlin_gradle_plugin_1_4_32_prebuilts",
    # keep sorted
    artifacts = [
        "@maven_tests//:org.jetbrains.kotlin.kotlin-android-extensions-runtime_1.4.32",
        "@maven_tests//:org.jetbrains.kotlin.kotlin-gradle-plugin_1.4.32",
    ],
    visibility = ["__subpackages__"],
)

maven_repository(
    name = "prefab_repo",
    artifacts = [
        "@maven_tests//:com.google.prefab.cli_2.0.0",
    ],
    visibility = [":__subpackages__"],
)

# Maven repo with all the UTP plugins required by tests with UTP.
maven_repository(
    name = "utp_plugins",
    # keep sorted
    artifacts = [
        "//tools/base/utp/android-device-provider-ddmlib:android-device-provider-ddmlib_bzl",
        "//tools/base/utp/android-device-provider-gradle:android-device-provider-gradle_bzl",
        "//tools/base/utp/android-test-plugin-host-additional-test-output:android-test-plugin-host-additional-test-output_bzl",
        "//tools/base/utp/android-test-plugin-host-additional-test-output-proto:android-test-plugin-host-additional-test-output-proto_bzl",
        "//tools/base/utp/android-test-plugin-host-coverage:android-test-plugin-host-coverage_bzl",
        "//tools/base/utp/android-test-plugin-host-device-info:android-test-plugin-host-device-info_bzl",
        "//tools/base/utp/android-test-plugin-host-logcat:android-test-plugin-host-logcat_bzl",
        "//tools/base/utp/android-test-plugin-host-retention:android-test-plugin-host-retention_bzl",
        "//tools/base/utp/android-test-plugin-result-listener-gradle:android-test-plugin-result-listener-gradle_bzl",
        "@maven_tests//:com.google.testing.platform.android-driver-instrumentation_0.0.8-alpha07",
        "@maven_tests//:com.google.testing.platform.android-test-plugin_0.0.8-alpha07",
        "@maven_tests//:com.google.testing.platform.core_0.0.8-alpha07",
    ],
    visibility = ["__subpackages__"],
)
