[
    filegroup(
        name = project_name,
        srcs = glob([project_name + "/**"]),
        visibility = [
            ":__subpackages__",
        ],
    )
    for project_name in glob(
        ["test-projects/*"],
        exclude = ["**/*.*"],  # Ignore files with '.' (e.g. .gitignore, commonBuildScript.gradle)
        exclude_directories = 0,
    )
]

# Used for bazel packages below this one that use GradleTestProject.
exports_files(["test-projects/commonBuildScript.gradle"])

LATEST_SUPPORT = "28.0.0"

LATEST_ANDROID_X_SUPPORT = "1.0.0"

LATEST_ANDROID_X_ARCH = "2.0.0"

LATEST_ANDROID_X_CONSTRAINTLAYOUT = "1.1.3"

# The tests can be updated to use a new platform in
# framework/src/main/java/com/android/build/gradle/integration/common/fixture/TestVersions.kt
filegroup(
    name = "android_platform_for_tests",
    srcs = ["//prebuilts/studio/sdk:platforms/android-33_build_only"],
    visibility = [":__subpackages__"],
)

load("//tools/base/bazel:maven.bzl", "maven_repository")

maven_repository(
    name = "support_library_latest",
    artifacts = [
        "@maven//:com.android.support.design_" + LATEST_SUPPORT,
        "@maven//:com.android.support.leanback-v17_" + LATEST_SUPPORT,
        "@maven//:com.android.support.support-v13_" + LATEST_SUPPORT,
        "@maven//:com.android.support.support-v4_" + LATEST_SUPPORT,
        "@maven//:android.arch.navigation.navigation-fragment_1.0.0",
        "@maven//:android.arch.persistence.room.runtime_1.0.0",
        "@maven//:com.android.support.test.rules_1.0.2",
        "@maven//:com.android.support.test.runner_1.0.2",
        "@maven//:org.jacoco.org.jacoco.ant_0.8.8",
    ],
    visibility = [":__subpackages__"],
)

maven_repository(
    name = "androidx_latest",
    artifacts = [
        "@maven//:androidx.room.room-compiler_" + LATEST_ANDROID_X_ARCH,
        "@maven//:androidx.room.room-runtime_" + LATEST_ANDROID_X_ARCH,
        "@maven//:androidx.appcompat.appcompat_" + LATEST_ANDROID_X_SUPPORT,
        "@maven//:androidx.preference.preference_" + LATEST_ANDROID_X_SUPPORT,
        "@maven//:androidx.constraintlayout.constraintlayout_" + LATEST_ANDROID_X_CONSTRAINTLAYOUT,
        "@maven//:androidx.legacy.legacy-support-v4_" + LATEST_ANDROID_X_SUPPORT,
    ],
    visibility = [":__subpackages__"],
)

maven_repository(
    name = "androidx_test_latest",
    # keep sorted
    artifacts = [
        "@maven//:androidx.test.ext.junit_1.1.2",
        "@maven//:androidx.test.rules_1.3.0",
        "@maven//:androidx.test.runner_1.3.0",
    ],
    visibility = [":__subpackages__"],
)

# Dagger dependencies
maven_repository(
    name = "dagger_prebuilts",
    # keep sorted
    artifacts = [
        "@maven//:com.google.dagger.dagger-compiler_2.28.3",
        "@maven//:com.google.dagger.dagger_2.28.3",
    ],
    visibility = [":__subpackages__"],
)

# Kotlin Gradle plugin dependencies
maven_repository(
    name = "kotlin_gradle_plugin_prebuilts",
    # keep sorted
    artifacts = [
        "@maven//:org.jetbrains.kotlin.android.org.jetbrains.kotlin.android.gradle.plugin_1.7.0",
        "@maven//:org.jetbrains.kotlin.jvm.org.jetbrains.kotlin.jvm.gradle.plugin_1.6.21",
        "@maven//:org.jetbrains.kotlin.jvm.org.jetbrains.kotlin.jvm.gradle.plugin_1.7.0",
        "@maven//:org.jetbrains.kotlin.kotlin-android-extensions-runtime_1.6.21",
        "@maven//:org.jetbrains.kotlin.kotlin-android-extensions-runtime_1.7.0",
        "@maven//:org.jetbrains.kotlin.kotlin-gradle-plugin-api_1.7.0",
        # 1.6.10 is required by the old version checker in PluginVersionCheckTest
        "@maven//:org.jetbrains.kotlin.kotlin-gradle-plugin_1.6.10",
        "@maven//:org.jetbrains.kotlin.kotlin-gradle-plugin_1.6.21",
        "@maven//:org.jetbrains.kotlin.kotlin-gradle-plugin_1.7.0",
        "@maven//:org.jetbrains.kotlin.kotlin-reflect_1.6.21",
        "@maven//:org.jetbrains.kotlin.kotlin-reflect_1.7.0",
        "@maven//:org.jetbrains.kotlin.kotlin-script-runtime_1.6.21",
        "@maven//:org.jetbrains.kotlin.kotlin-script-runtime_1.7.0",
        "@maven//:org.jetbrains.kotlin.kotlin-stdlib-jdk8_1.6.21",
        "@maven//:org.jetbrains.kotlin.kotlin-stdlib-jdk8_1.7.0",
    ],
    visibility = ["//visibility:public"],
)

# Kotlin Gradle plugin 1.4.32 dependencies
maven_repository(
    name = "kotlin_gradle_plugin_1_4_32_prebuilts",
    # keep sorted
    artifacts = [
        "@maven//:org.jetbrains.kotlin.kotlin-android-extensions-runtime_1.4.32",
        "@maven//:org.jetbrains.kotlin.kotlin-gradle-plugin_1.4.32",
    ],
    visibility = ["__subpackages__"],
)

maven_repository(
    name = "prefab_repo",
    artifacts = [
        "@maven//:com.google.prefab.cli_2.0.0",
    ],
    visibility = [":__subpackages__"],
)

# Maven repo with all the UTP plugins required by tests with UTP.
maven_repository(
    name = "utp_plugins",
    # keep sorted
    artifacts = [
        "//tools/base/utp/android-device-provider-ddmlib:android-device-provider-ddmlib",
        "//tools/base/utp/android-device-provider-ddmlib-proto:android-device-provider-ddmlib-proto",
        "//tools/base/utp/android-device-provider-gradle:android-device-provider-gradle",
        "//tools/base/utp/android-device-provider-gradle-proto:android-device-provider-gradle-proto",
        "//tools/base/utp/android-test-plugin-host-additional-test-output:android-test-plugin-host-additional-test-output",
        "//tools/base/utp/android-test-plugin-host-additional-test-output-proto:android-test-plugin-host-additional-test-output-proto",
        "//tools/base/utp/android-test-plugin-host-coverage:android-test-plugin-host-coverage",
        "//tools/base/utp/android-test-plugin-host-device-info:android-test-plugin-host-device-info",
        "//tools/base/utp/android-test-plugin-host-logcat:android-test-plugin-host-logcat",
        "//tools/base/utp/android-test-plugin-host-retention:android-test-plugin-host-retention",
        "//tools/base/utp/android-test-plugin-result-listener-gradle:android-test-plugin-result-listener-gradle",
        "@maven//:com.google.testing.platform.android-driver-instrumentation_0.0.8-alpha08",
        "@maven//:com.google.testing.platform.android-test-plugin_0.0.8-alpha08",
        "@maven//:com.google.testing.platform.core_0.0.8-alpha08",
    ],
    visibility = ["__subpackages__"],
)

maven_repository(
    name = "relocated_coroutines_test_repo",
    artifacts = [
        "@maven//:org.jetbrains.kotlinx.kotlinx-coroutines-android_1.5.2",
        "@maven//:org.jetbrains.kotlinx.kotlinx-coroutines-core_1.5.2",
        "@maven//:org.jetbrains.kotlinx.kotlinx-coroutines-core-jvm_1.5.2",
    ],
    visibility = [":__subpackages__"],
)
