load("//tools/base/bazel:maven.bzl", "maven_java_library", "maven_pom")
load("//tools/base/bazel:kotlin.bzl", "kotlin_library", "kotlin_test")

maven_pom(
    name = "pom",
    artifact = "kotlin-compiler-embeddable",
    group = "org.jetbrains.kotlin",
    version = "1.3.60-withExperimentalGoogleExtensions-20191010",
    visibility = ["//visibility:public"],
)

kotlin_library(
    name = "kotlin-compiler-embeddable",
    srcs = ["src/main/java"],
    bundled_deps = ["//prebuilts/tools/common/m2/repository/org/jetbrains/kotlin/kotlin-compiler-embeddable/1.3.60-withExperimentalGoogleExtensions-20191010:jar"],
    pom = ":pom",
    visibility = ["//visibility:public"],
)
